--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,7 +77,7 @@ body {
 h1, h2, h3, h4, h5, h6 {
 	font-weight: 700;
   font-size: 28px;
-    color: #000000;
+    color: #f3f3f3;
 }
 
 h7 {
@@ -99,7 +99,7 @@ h7 {
 }
 
 .navbar-default {
-	background-color: white;
+	background-color: #f3f3f3;
 	border-color: transparent;
   font-weight: 700;
   font-size: 28px;
