--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -69,6 +69,7 @@ body {
     font-family: 'Source Sans Pro', sans-serif;
     font-weight: 400;
     font-size: 18px;
+background-color: #f3f3f3;
 
     -webkit-font-smoothing: antialiased;
     -webkit-overflow-scrolling: touch;
@@ -77,7 +78,7 @@ body {
 h1, h2, h3, h4, h5, h6 {
 	font-weight: 700;
   font-size: 28px;
-    color: #f3f3f3;
+    color: #0739FF;
 }
 
 h7 {
