--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -282,7 +282,8 @@ float: left;
 }
 
 .imgDescription {
-  height: 400px;
+  height: 100%;
+  width: 100%;
   line-height: 31px;
   text-align: center;
   position: absolute;
