--- a/css/style.css
+++ b/css/style.css
@@ -63,7 +63,7 @@ iframe {
   padding-top: 2vh;
   padding-bottom: 2vh;
   height: 5vh;
-  text-align: center;
+  text-align: right;
   width: auto;
 }
 
