--- a/css/style.css
+++ b/css/style.css
@@ -127,7 +127,7 @@ iframe {
 
 .description  {
   font-weight: bold;
-  line-height: 5.4rem;
+  line-height: 109%;
   color: #121212;
   font-size: 5rem;
   text-align: left;
