--- a/css/style.css
+++ b/css/style.css
@@ -7,8 +7,8 @@ body{
 
 
 /* GLOBAL TEXT */
-  font-size: 2.2em;
-  line-height: 1.15em;
+  font-size: 2.2rem;
+  line-height: 2.35rem;
   font-weight: bold;
 }
 
