--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ body{
 
 /* GLOBAL TEXT */
   font-size: 2.2rem;
-  line-height: 2.35rem;
+  line-height: 113%;
   font-weight: bold;
 }
 
@@ -153,7 +153,7 @@ iframe {
   width:100px;
   display: inline-block;
   height: 1.8em;
-  padding-top: 0.39vw;
+  padding-top: 1vw;
   white-space:nowrap;
   position: relative;
   -moz-animation: rollingtitle 30s linear infinite;
