--- a/css/style.css
+++ b/css/style.css
@@ -153,7 +153,7 @@ iframe {
   width:100px;
   display: inline-block;
   height: 1.8em;
-  padding-top: 1vw;
+  padding-top: 0.25em;
   white-space:nowrap;
   position: relative;
   -moz-animation: rollingtitle 30s linear infinite;
