--- a/css/mediaquerys.css
+++ b/css/mediaquerys.css
@@ -62,7 +62,7 @@
   }
 }
 
-@media screen and (max-width: 400px) and (orientation: portrait) {
+@media screen and (orientation: portrait) {
 
   .mainwrap {
     grid-template-columns: 1fr;
