--- a/css/mediaquerys.css
+++ b/css/mediaquerys.css
@@ -43,7 +43,7 @@
   }
 
   .contentdescription {
-    padding-right:0em;
+    padding-right: 0em;
   }
 
   .embed-container-16-9 {
@@ -77,18 +77,22 @@
     margin-bottom: 1em;
   }
 
-  .title  {
+  .title {
     display: none;
   }
 
-  .navwrap  {
+  .navwrap {
     grid-template-columns: 0fr 4fr;
     margin-bottom: 4vh;
   }
 
-  body{
+  body {
     /* GLOBAL TEXT */
-      font-size: 3.7rem;
-      line-height: 120%;
-    }
+    font-size: 3.7em;
+    line-height: 120%;
+  }
+
+  .subTitle {
+    order: 1;
+  }
 }
