--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@ body {
 
 
   /* GLOBAL TEXT */
+  font-family: 'Times New Roman', Times, serif;
   font-size: 2.1em;
   line-height: 113%;
   font-weight: bold;
